ui/main/src/scss/styles.scss
/* ... */
.ngb-tp {
    width: 80px;
}

// use in date time filter when time is disabled
.form-control:disabled {
    background-color: var(--opfab-bgcolor-darker);
    color: #606267;
}

// For time picker
.btn-link {
    font-size: 13px;
    color: var(--opfab-input-text-color);
}

// ngx-type_ahead conf

.opfab-input-type-ahead {
    box-sizing: border-box;
    position: relative;
    color: var(--opfab-input-text-color);
    border: 1px solid var(--opfab-form-border-color);
    border-radius: 3px;
    font-size: 13px;
    outline: none;
    min-height: 46px;
    background-color: var(--opfab-bgcolor-darker);
}

.opfab-input-type-ahead > input {
    background-color: var(--opfab-bgcolor-darker);
    color: var(--opfab-input-text-color);
    padding: 10px;
    height: 42px;
    border: none;
    outline: none;
    -webkit-appearance: none;
    -webkit-autofill: none;

    // Firefox : to avoid browser styling when auto-filling input field (example password)
    // see https://stackoverflow.com/questions/55228377/remove-new-firefox-autofill-color
    filter: none;
}

.opfab-input-type-ahead > type-ahead {
    padding: 10px;
    width: 100%;
    border: none;
    outline: none;
    -webkit-appearance: none;
}

.opfab-input-type-ahead > label {
    margin-left: 10px;
    padding-left: 10px;
    padding-right: 10px;
    position: absolute;
    font-size: 11px;
    margin-top: -10px;
    left: 10;
    color: var(--opfab-form-label-text-color);
    background-color: var(--opfab-bgcolor-darker);
}

type-ahead > input {
    background-color: var(--opfab-bgcolor-darker);
    color: var(--opfab-input-text-color);
}

type-ahead > .badge-primary {
    background-color: var(--opfab-bgcolor);
    font-size: 13px;
    font-weight: lighter;
    margin-right: 5px;
    color: var(--opfab-input-text-color);
}
// end type-ahead  conf


// Class to use when background form is lighter

.opfab-form-lighter {
    .form-control,
    .form-control:disabled,
    .opfab-input-type-ahead,
    .opfab-input-type-ahead > input,
    .opfab-input-type-ahead label,
    type-ahead > input {
        background-color: var(--opfab-bgcolor);
    }
    type-ahead > .badge-primary {
        background-color: var(--opfab-bgcolor-darker);
    }
}

// Pagination component config
ngb-pagination {
    .page-link {
        background-color: var(--opfab-bgcolor-darker);
        color: var(--opfab-text-color-stronger);
        border: 0px;
    }
    .page-item.active .page-link {
        background-color: var(--opfab-pagination-active-page-background);
        color: var(--opfab-bgcolor-darker);
    }

    .page-item :hover {
        background-color: var(--opfab-button-disable-bgcolor);
        color: var(--opfab-text-color-stronger);
    }

    .page-link:focus {
        box-shadow: none;
    }

    .page-item.disabled .page-link {
        background-color: var(--opfab-bgcolor-darker);
        color: var(--opfab-pagination-disabled-link);
    }
}

.archives-page .form-control {
    border-radius: 5px;
    padding: 5px;
}
select.form-control[multiple] {
    height: calc(1.5em + 0.75rem + 2px);
}
.ngb-tp-spacer {
    width: 0.3em !important;
}
.ngb-tp-input-container button {
    padding-top: 3px;
    padding-bottom: 3px;
}
.pagination {
    margin-top: 5px;
}

// Override color for today in calendar
.alert-info {
    background-color: var(--opfab-bgcolor);
}

html,
body {
    height: 100%;
}

.mat-select-panel {
    background-color: var(--opfab-bgcolor);
}

// ngbModal configuration
.modal-fullscreen {
    max-width: 100vw * 0.9;
    margin-left: 100vw * 0.05;
    max-height: calc(100% - 35px);
    margin-top: 25px;
    margin-bottom: 10px;
    transition: 0s !important;
}

.modal-usercard {
    max-width: 1300px;
}

.modal-body {
    background-color: var(--opfab-bgcolor);
    color: var(--opfab-textcolor);
    font-size: 16px;
    font-weight: 400;
}

.modal-header {
    background-color: var(--opfab-bgcolor);
    height: 60px;
    font-size: 20px;
    font-weight: bold;
    color: var(--opfab-color-darker);
}

.opfab-close-modal-icon {
    color: var(--opfab-navbar-color);
    margin-left: 5px;
    margin-right: 5px;
    letter-spacing: 0.54px;
    line-height: 30px;
    font-size: 30px;
    cursor: pointer;
    &:hover,
    &:focus {
        color: var(--opfab-navbar-color-hover);
    }
}

// Specific configuration for modal in administration interface
.cdk-overlay-container,
.cdk-overlay-pane {
    z-index: 9999 !important;
}

// Global colors

.opfab-colors {
    background-color: var(--opfab-bgcolor);
    color: var(--opfab-text-color);
}

.opfab-color-danger {
    color: red;
}

.opfab-color-warning {
    color: #ff6600;
}
.opfab-color-success {
    color: green;
}

.opfab-timeline-bgcolor {
    background-color: var(--opfab-timeline-bgcolor);
}

.opfab-popover {
    background-color: var(--opfab-popover-bgcolor);
    color: var(--opfab-text-color);
    .popover-header {
        color: var(--opfab-text-color);
        background-color: var(--opfab-popover-bgcolor);
        border-bottom: 1px solid var(--opfab-text-color);
    }
    .popover-body {
        color: var(--opfab-text-color);
        margin-top: -10px;
        margin-bottom: -10px;
    }
    .arrow::after {
        border-right-color: var(--opfab-popover-bgcolor);
    }
}

.opfab-popover-with-scrolling {
    max-width: 800px;
    .popover-body {
        padding: 0px;
        max-height: 500px;
        overflow: auto;
        overflow-x: hidden;
        margin-top: 0;
        margin-bottom: 0;
    }
}
/* ... */

